--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   cupertino_icons: ^1.0.8
   intl: ^0.18.0
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
